infra/components/resources/cockroachdb-insecure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  namespace: cockroachdb
  labels:
    app.kubernetes.io/name: cockroachdb
spec:
  selector:
    app.kubernetes.io/name: cockroachdb
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: http
      protocol: TCP
    - name: sql
      port: 26257
      targetPort: 26257
      protocol: TCP
